...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="270dp"
        android:layout_height="273dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="33dp"
...
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Checkout"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartList" />

    <Button
        android:id="@+id/buttonBackHome"
...
