<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.stockapp.HomeActivity">
    <item
        android:id="@+id/action_cart"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/cart"

        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="always" />
</menu>
