...
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToCart"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
...
