<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="296dp"
        android:layout_height="68dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="296dp"
        android:layout_height="68dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="119dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="270dp"
        android:layout_height="60dp"

        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Sign In"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="86dp"

        android:layout_marginTop="26dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="142dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>