<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="367dp"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <EditText
        android:id="@+id/addPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="269dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="270dp"
        android:layout_height="60dp"

        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>