...
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="message">Wrong Credentials</string>
    <string name="welcomeMessage">Welcome!</string>
    <string name="addedToCart">Added to cart!</string>
</resources>

